// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadLink matches the snapshot 1`] = `
<a
  class="sc-EHOje fmTxUw sc-gZMcBi eDfGXo"
  download="filename.csv"
  tabindex="0"
>
  CSV
</a>
`;

exports[`DownloadLink matches the snapshot 2`] = `
<a
  class="sc-EHOje fmTxUw sc-gZMcBi eDfGXo"
  disabled=""
  download="filename.csv"
  tabindex="-1"
>
  CSV
</a>
`;
